test/netlist/error/freevar-unused.bop
A(a) = b
with unused = c
where
  b = not(a);
end where;
